@@ -3,7 +3,7 @@
  *
  * This file is part of msmtp, an SMTP client.
  *
- * Copyright (C) 2004, 2005, 2011, 2014
+ * Copyright (C) 2004, 2005, 2011, 2014, 2018
  * Martin Lambers <marlam@marlam.de>
  *
  *   This program is free software; you can redistribute it and/or modify
@@ -125,24 +125,6 @@ char *xstrndup(const char *s, size_t n)
 /*
  * xasprintf()
  */
-
-#ifndef HAVE_VASPRINTF
-static int vasprintf(char **strp, const char *format, va_list args)
-{
-    /* vasprintf() is only missing on Windows nowadays.
-     * This replacement function only works when the vsnprintf() function is available
-     * and its return value is standards compliant. This is true for the MinGW version
-     * of vsnprintf(), but not for Microsofts version (Visual Studio etc.)!
-     */
-    int length = vsnprintf(NULL, 0, format, args);
-    if (length > INT_MAX - 1 || !(*strp = malloc(length + 1)))
-    {
-        return -1;
-    }
-    vsnprintf(*strp, length + 1, format, args);
-    return length;
-}
-#endif
 
 char *xasprintf(const char *format, ...)
 {
